--- a/docker-compose-dependencies.yml
+++ b/docker-compose-dependencies.yml
@@ -72,7 +72,7 @@ services:
   idam-web-public:
     image: hmctspublic.azurecr.io/idam/web-public:stable
     environment:
-      - JAVA_OPTS=-Xms128m -Xms512m
+      - JAVA_TOOL_OPTIONS=-Xms128m -Xmx512m -XX:MaxPermSize=512m
       - STRATEGIC_SERVICE_URL=http://idam-api:5000
     ports:
       - 9002:8080
@@ -82,7 +82,7 @@ services:
   idam-web-admin:
     image: hmctspublic.azurecr.io/idam/web-admin:stable
     environment:
-      - JAVA_OPTS=-Xms128m -Xms512m
+      - JAVA_TOOL_OPTIONS=-Xms128m -Xmx512m -XX:MaxPermSize=512m
       - STRATEGIC_SERVICE_URL=http://idam-api:5000
       - STRATEGIC_PUBLIC_URL=http://idam-web-public:9002
     ports:
@@ -132,7 +132,7 @@ services:
       - PACKAGES_NAME=dm-store
       - PACKAGES_VERSION=unkown
       #      debug mode
-      - JAVA_OPTS=-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005
+      - JAVA_TOOL_OPTIONS=-Xms128m -Xmx512m -XX:MaxPermSize=512m
     links:
       - dm-store-db
       - service-auth-provider-api
