--- a/src/aat/resources/application.yml
+++ b/src/aat/resources/application.yml
@@ -17,7 +17,7 @@ s2s:
   api:
     url: 'http://localhost:4502'
     secret: 'AAAAAAAAAAAAAAAA'
-    serviceName: 'em_gw'
+    serviceName: 'ccd_gw'
     ccdGwSecret: 'AAAAAAAAAAAAAAAA'
     ccdGwServiceName: 'ccd_gw'
 
@@ -32,4 +32,5 @@ core_case_data:
   api:
     url: 'http://localhost:4452'
 
-
+case_document_am:
+  url: 'http://localhost:4455'
