--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,9 @@
 plugins {
     id 'checkstyle'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-    id 'org.springframework.boot' version '2.4.5'
+    id 'org.springframework.boot' version '2.5.4'
     id 'com.github.ben-manes.versions' version '0.39.0'
     id 'java-library'
-    id 'maven'
     id 'maven-publish'
     id 'io.franzbecker.gradle-lombok' version '4.0.0'
 }
@@ -138,7 +137,7 @@ publishing {
 
 ext {
     lombokVersion = '1.18.20'
-    feignVersion = '11.2'
+    feignVersion = '11.6'
     feignFormVersion = '3.8.0'
     wiremockVersion = '2.24.1'
 }
@@ -146,35 +145,35 @@ ext {
 ext["spring-cloud-openfeign.version"] = "3.0.3"
 
 dependencies {
-    implementation("org.springframework.cloud:spring-cloud-starter-bootstrap:3.0.1")
-    compile "uk.gov.hmcts.reform:idam-client:2.0.0"
-    compile "uk.gov.hmcts.reform:core-case-data-store-client:4.7.6"
-    compile "uk.gov.hmcts.reform:document-management-client:7.0.0"
-    compile 'com.github.hmcts:ccd-case-document-am-client:1.7.1'
+    implementation("org.springframework.cloud:spring-cloud-starter-bootstrap:3.0.3")
+    implementation "uk.gov.hmcts.reform:idam-client:2.0.0"
+    implementation "uk.gov.hmcts.reform:core-case-data-store-client:4.7.6"
+    implementation "uk.gov.hmcts.reform:document-management-client:7.0.0"
+    implementation 'com.github.hmcts:ccd-case-document-am-client:1.7.1'
     
-    compile group: 'com.warrenstrange', name: 'googleauth', version: '1.5.0'
+    implementation group: 'com.warrenstrange', name: 'googleauth', version: '1.5.0'
 
-    api group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.0.1'
-    api group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.4.5'
-    compile "org.springframework.boot:spring-boot-starter-test"
-    api group: 'io.github.openfeign', name: 'feign-jackson', version: feignVersion
-    api group: 'io.github.openfeign', name: 'feign-httpclient', version: feignVersion
-    api group: 'io.github.openfeign.form', name: 'feign-form', version: feignFormVersion
-    api group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jdk8', version: '2.12.3'
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.0.3'
+    implementation group: 'org.springframework.boot', name:  'spring-boot-starter-actuator'
+    implementation group: 'org.springframework.boot', name : 'spring-boot-starter-test'
+    implementation group: 'io.github.openfeign', name: 'feign-jackson', version: feignVersion
+    implementation group: 'io.github.openfeign', name: 'feign-httpclient', version: feignVersion
+    implementation group: 'io.github.openfeign.form', name: 'feign-form', version: feignFormVersion
+    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jdk8', version: '2.12.4'
 
-    compile group: 'org.projectlombok', name: 'lombok', version: lombokVersion
+    implementation group: 'org.projectlombok', name: 'lombok', version: lombokVersion
     annotationProcessor group: 'org.projectlombok', name: 'lombok', version: lombokVersion
 
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6.3'
-    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.6.3'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.2'
+    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.2'
 
     testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 
-    testCompile group: 'com.github.tomakehurst', name:'wiremock-jre8', version: '2.28.1'
-    testCompile group: 'org.mockito', name: 'mockito-core', version: '3.11.0'
+    testImplementation group: 'com.github.tomakehurst', name:'wiremock-jre8', version: '2.30.1'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.12.4'
 
-    testImplementation group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock', version: '3.0.0'
-    compile group: 'junit', name: 'junit', version: '4.13'
+    testImplementation group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock', version: '3.0.3'
+    implementation group: 'junit', name: 'junit', version: '4.13'
 }
 
 wrapper {
