--- a/build.gradle
+++ b/build.gradle
@@ -146,7 +146,7 @@ ext {
 ext["spring-cloud-openfeign.version"] = "3.0.3"
 
 dependencies {
-    implementation("org.springframework.cloud:spring-cloud-starter-bootstrap:3.0.4")
+    compile "org.springframework.cloud:spring-cloud-starter-bootstrap:3.0.4"
     compile "com.github.hmcts:idam-java-client:2.0.1"
     compile "com.github.hmcts:ccd-client:4.7.7"
     compile "com.github.hmcts:document-management-client:7.0.1"
@@ -157,6 +157,7 @@ dependencies {
     api group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.0.4'
     api group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.4.5'
     compile "org.springframework.boot:spring-boot-starter-test"
+    api "org.springframework.boot:spring-boot-starter-web"
     api group: 'io.github.openfeign', name: 'feign-jackson', version: feignVersion
     api group: 'io.github.openfeign', name: 'feign-httpclient', version: feignVersion
     api group: 'io.github.openfeign.form', name: 'feign-form', version: feignFormVersion
