--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,9 @@
 plugins {
     id 'checkstyle'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-    id 'org.springframework.boot' version '2.4.5'
+    id 'org.springframework.boot' version '2.5.5'
     id 'com.github.ben-manes.versions' version '0.39.0'
     id 'java-library'
-    id 'maven'
     id 'maven-publish'
     id 'io.franzbecker.gradle-lombok' version '5.0.0'
 }
@@ -41,10 +40,6 @@ sourceSets {
         java {
             compileClasspath += main.output
             runtimeClasspath += main.output
-            srcDir('src/aat/java')
-        }
-        resources {
-            srcDir('src/aat/resources')
         }
     }
     test {
@@ -147,22 +142,22 @@ ext["spring-cloud-openfeign.version"] = "3.0.3"
 
 dependencies {
     implementation("org.springframework.cloud:spring-cloud-starter-bootstrap:3.0.4")
-    compile "com.github.hmcts:idam-java-client:2.0.1"
-    compile "com.github.hmcts:ccd-client:4.7.7"
-    compile "com.github.hmcts:document-management-client:7.0.1"
-    compile 'com.github.hmcts:ccd-case-document-am-client:1.59'
-    
-    compile group: 'com.warrenstrange', name: 'googleauth', version: '1.5.0'
+    implementation "com.github.hmcts:idam-java-client:2.0.1"
+    implementation "com.github.hmcts:ccd-client:4.7.7"
+    implementation "com.github.hmcts:document-management-client:7.0.1"
+    implementation 'com.github.hmcts:ccd-case-document-am-client:1.59'
 
-    api group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.0.4'
-    api group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.4.5'
-    compile "org.springframework.boot:spring-boot-starter-test"
-    api group: 'io.github.openfeign', name: 'feign-jackson', version: feignVersion
-    api group: 'io.github.openfeign', name: 'feign-httpclient', version: feignVersion
-    api group: 'io.github.openfeign.form', name: 'feign-form', version: feignFormVersion
-    api group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jdk8', version: '2.13.0'
+    implementation group: 'com.warrenstrange', name: 'googleauth', version: '1.5.0'
 
-    compile group: 'org.projectlombok', name: 'lombok', version: lombokVersion
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.0.4'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
+    implementation group: 'io.github.openfeign', name: 'feign-jackson', version: feignVersion
+    implementation group: 'io.github.openfeign', name: 'feign-httpclient', version: feignVersion
+    implementation group: 'io.github.openfeign.form', name: 'feign-form', version: feignFormVersion
+    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jdk8', version: '2.13.0'
+
+    implementation group: 'org.projectlombok', name: 'lombok', version: lombokVersion
     annotationProcessor group: 'org.projectlombok', name: 'lombok', version: lombokVersion
 
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: junitJupiterVersion
@@ -170,11 +165,13 @@ dependencies {
 
     testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 
-    testCompile group: 'com.github.tomakehurst', name:'wiremock-jre8', version: '2.31.0'
-    testCompile group: 'org.mockito', name: 'mockito-core', version: '3.12.4'
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '3.0.4'
+
+    testImplementation group: 'com.github.tomakehurst', name:'wiremock-jre8', version: '2.31.0'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.12.4'
 
     testImplementation group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock', version: '3.0.4'
-    compile group: 'junit', name: 'junit', version: '4.13'
+    implementation group: 'junit', name: 'junit', version: '4.13'
 }
 
 wrapper {
