--- a/src/aat/resources/application.yml
+++ b/src/aat/resources/application.yml
@@ -3,6 +3,21 @@ spring:
   main:
     allow-bean-definition-overriding: true
 
+management:
+  endpoint:
+    health:
+      show-details: "always"
+      show-components: "always"
+      probes:
+        enabled: true
+  endpoints:
+    web:
+      base-path: '/'
+      exposure:
+        include:
+          - health
+          - info
+
 idam:
   api:
     url: 'http://localhost:5000'
