--- a/build.gradle
+++ b/build.gradle
@@ -183,10 +183,12 @@ test {
 }
 
 bootJar {
+    archiveClassifier = 'boot'
     enabled = false
 }
 
 jar {
+    archiveClassifier = ''
     enabled = true
 }
 
