--- a/build.gradle
+++ b/build.gradle
@@ -141,7 +141,7 @@ ext {
 ext["spring-cloud-openfeign.version"] = "3.0.3"
 
 dependencies {
-    implementation("org.springframework.cloud:spring-cloud-starter-bootstrap:3.0.4")
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '3.0.4'
     implementation "com.github.hmcts:idam-java-client:2.0.1"
     implementation "com.github.hmcts:ccd-client:4.7.7"
     implementation "com.github.hmcts:document-management-client:7.0.1"
