--- a/docker-compose-dependencies.yml
+++ b/docker-compose-dependencies.yml
@@ -5,8 +5,8 @@ services:
   service-auth-provider-api:
     image: hmctspublic.azurecr.io/rpe/service-auth-provider:latest
     environment:
+#       this jwt key is a local dev key for docker testing - as used by many projects
       - jwtKey=wThK0f0/lh3FlxFcL4xUWDMI5C1J9KyQBgXV4wseh1e5J1uYJIjvTvArHxQDrYoHJ23xFxjHkOnvNbR5dXRoxA==
-#      - Add key for any microservice that will be used: orchestrator, stitching api, doc store
       - microserviceKeys_em_gw=AAAAAAAAAAAAAAAA
       - microserviceKeys_em_stitching_api=AAAAAAAAAAAAAAAA
       - microserviceKeys_em_ccd_orchestrator=AAAAAAAAAAAAAAAA
