--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'checkstyle'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-    id 'org.springframework.boot' version '2.7.2'
+    id 'io.spring.dependency-management' version '1.0.13.RELEASE'
+    id 'org.springframework.boot' version '2.7.3'
     id 'com.github.ben-manes.versions' version '0.42.0'
     id 'java-library'
     id 'maven-publish'
@@ -131,17 +131,18 @@ publishing {
 }
 
 ext {
-    lombokVersion = '1.18.20'
-    feignVersion = '11.2'
+    lombokVersion = '1.18.24'
+    feignVersion = '11.9.1'
     feignFormVersion = '3.8.0'
     wiremockVersion = '2.24.1'
-    junitJupiterVersion = '5.8.1'
+    junitJupiterVersion = '5.9.0'
+    springCloud = '3.1.4'
 }
 
 ext["spring-cloud-openfeign.version"] = "3.0.3"
 
 dependencies {
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '3.1.0'
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: springCloud
     implementation "com.github.hmcts:idam-java-client:2.0.1"
     implementation "com.github.hmcts:ccd-client:4.8.3"
     implementation "com.github.hmcts:document-management-client:7.0.1"
@@ -149,13 +150,13 @@ dependencies {
 
     implementation group: 'com.warrenstrange', name: 'googleauth', version: '1.5.0'
 
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '3.1.0'
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: springCloud
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
     implementation group: 'io.github.openfeign', name: 'feign-jackson', version: feignVersion
     implementation group: 'io.github.openfeign', name: 'feign-httpclient', version: feignVersion
     implementation group: 'io.github.openfeign.form', name: 'feign-form', version: feignFormVersion
-    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jdk8', version: '2.13.0'
+    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jdk8', version: '2.13.4'
 
     implementation group: 'org.projectlombok', name: 'lombok', version: lombokVersion
     annotationProcessor group: 'org.projectlombok', name: 'lombok', version: lombokVersion
@@ -165,12 +166,12 @@ dependencies {
 
     testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 
-    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '3.1.0'
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: springCloud
 
-    testImplementation group: 'com.github.tomakehurst', name:'wiremock-jre8', version: '2.32.0'
-    testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.2.0'
+    testImplementation group: 'com.github.tomakehurst', name:'wiremock-jre8', version: '2.33.2'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.8.0'
 
-    testImplementation group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock', version: '3.1.0'
+    testImplementation group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock', version: springCloud
     implementation group: 'junit', name: 'junit', version: '4.13'
 }
 
