--- a/build.gradle
+++ b/build.gradle
@@ -143,10 +143,10 @@ ext["spring-cloud-openfeign.version"] = "3.0.3"
 
 dependencies {
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: springCloud
-    implementation "com.github.hmcts:idam-java-client:2.0.1"
-    implementation "com.github.hmcts:ccd-client:4.9.1"
-    implementation "com.github.hmcts:document-management-client:7.0.1"
-    implementation 'com.github.hmcts:ccd-case-document-am-client:1.59'
+    api "com.github.hmcts:idam-java-client:2.0.1"
+    api "com.github.hmcts:ccd-client:4.9.1"
+    api "com.github.hmcts:document-management-client:7.0.1"
+    api 'com.github.hmcts:ccd-case-document-am-client:1.59'
 
     implementation group: 'com.warrenstrange', name: 'googleauth', version: '1.5.0'
 
