EM-4606 java17 upgrade

--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,13 @@ def buildNumber = System.getenv("RELEASE_VERSION")?.replace("refs/tags/", "") ?:
 
 group 'uk.gov.hmcts.reform'
 version buildNumber
-sourceCompatibility = 11
-targetCompatibility = 11
+
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
 
 dependencyUpdates.resolutionStrategy = {
     componentSelection { rules ->
@@ -187,6 +192,11 @@ dependencyManagement {
 
 wrapper {
     distributionType = Wrapper.DistributionType.ALL
+}
+
+// https://github.com/gradle/gradle/issues/16791
+tasks.withType(JavaExec).configureEach {
+    javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
 }
 
 test {
