--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -11,8 +11,9 @@
       "enabled": false
     }
   ],
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:base"
+    "local>hmcts/.github:renovate-config"
   ],
   "enabledManagers": ["gradle-wrapper"]
 }
