--- a/build.gradle
+++ b/build.gradle
@@ -179,6 +179,9 @@ dependencyManagement {
             entry 'log4j-api'
             entry 'log4j-to-slf4j'
         }
+        dependencySet(group: 'org.junit.platform', version: '1.11.0') {
+            entry 'junit-platform-commons'
+        }
     }
 
 }
