upgrade to junit 5

--- a/build.gradle
+++ b/build.gradle
@@ -223,4 +223,5 @@ task functional(type: Test) {
     setTestClassesDirs(sourceSets.aat.output.classesDirs)
     setClasspath(sourceSets.aat.runtimeClasspath)
     include "uk/gov/hmcts/reform/em/functional/**"
+    useJUnitPlatform()
 }
