--- a/build.gradle
+++ b/build.gradle
@@ -181,6 +181,8 @@ dependencyManagement {
         }
         dependencySet(group: 'org.junit.platform', version: '1.12.0') {
             entry 'junit-platform-commons'
+            entry 'junit-platform-engine'
+            entry 'junit-platform-launcher'
         }
     }
 
