--- a/build.gradle
+++ b/build.gradle
@@ -65,12 +65,6 @@ compileTestJava {
     options.compilerArgs << '-Xlint:deprecation'
 }
 
-repositories {
-    mavenCentral()
-    mavenLocal()
-    maven { url 'https://jitpack.io' }
-}
-
 jar {
     manifest {
         attributes 'Implementation-Title': project.name, 'Implementation-Version': project.version
@@ -110,6 +104,18 @@ artifacts {
 }
 
 publishing {
+
+    repositories {
+        maven {
+            name = "AzureArtifacts"
+            url = uri("https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1")
+            credentials {
+                username = System.getenv("AZURE_DEVOPS_ARTIFACT_USERNAME")
+                password = System.getenv("AZURE_DEVOPS_ARTIFACT_TOKEN")
+            }
+        }
+    }
+
     publications {
         Main(MavenPublication) {
             from components.java
@@ -142,8 +148,8 @@ ext["spring-cloud-openfeign.version"] = "3.0.3"
 dependencies {
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '4.3.0'
     api "com.github.hmcts:idam-java-client:3.0.4"
-    api "com.github.hmcts:ccd-client:5.1.0"
-    api "com.github.hmcts:document-management-client:7.0.1"
+    api "com.github.hmcts:core-case-data-store-client:5.1.0"
+    api "com.github.hmcts:document-management-client:7.0.0"
     api 'com.github.hmcts:ccd-case-document-am-client:1.59.2'
 
     implementation group: 'com.warrenstrange', name: 'googleauth', version: '1.5.0'
