include tests in ci

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,3 +24,5 @@ jobs:
           distribution: 'temurin'
       - name: Build
         run: ./gradlew check
+      - name: Test
+        run: ./gradlew test
